# youtube-summary

./: .env.example  .gitignore  Cargo.toml  README.md  SKILL.md  rust-toolchain.toml
.github/workflows/: build-matrix.yml
src/: main.rs
