[package]
name = "youtube-transcript"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for fetching YouTube transcripts and video metadata for the youtube-summary skill"
license = "MIT"
authors = ["Ivan Mezentsev"]
readme = "README.md"
repository = "https://github.com/agentics-skills/youtube-summary"
homepage = "https://github.com/agentics-skills/youtube-summary"
keywords = ["youtube", "transcript", "cli", "summary", "opencode"]
categories = ["command-line-utilities"]
rust-version = "1.89"

[[bin]]
name = "youtube-transcript"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.12.2"
roxmltree = "0.21.1"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
